--- a/tasks/lookup.yaml
+++ b/tasks/lookup.yaml
@@ -54,5 +54,4 @@
   ansible.builtin.set_fact:
     root_certificate_file_exists: false
   when:
-    - not result.stat.exists
-    - result.failed is true
+    - result.stat.exists is false
