Added install Playbook

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,11 +11,11 @@
 - name: "Include tasks from lookup playbook"
   ansible.builtin.include_tasks: lookup.yaml
 
-#- name: "Include tasks from install playbook"
-#  ansible.builtin.include_tasks: install.yaml
-#  when:
-#    - install is defined
-#    - install | bool
+- name: "Include tasks from install playbook"
+  ansible.builtin.include_tasks: install.yaml
+  when:
+    - certificate_file_exists is defined
+    - not certificate_file_exists
 
 #- name: "Include tasks from cert playbook"
 #  ansible.builtin.include_tasks: cert.yaml
