--- a/tasks/install.yaml
+++ b/tasks/install.yaml
@@ -7,6 +7,13 @@
     dest: "{{ certificate_dir }}"
     mode: '0440'
 
+- debug:
+    msg: "{{ certificate_file.rsplit('.', 1)[1] }}.crt"
+
+#- name: "Rename Certificate on {{ inventory_hostname }} (Debian)"
+#  ansible.builtin.shell:
+#    cmd: mv "{{ certificate_dir }}/{{ certificate_file }}" "{{ certificate_dir }}/{{ certificate_file.rsplit('.', 1)[1] }}.crt"
+
 - name: "Call Shared CA Certificates Update tool on {{ inventory_hostname }}"
   ansible.builtin.shell:
     cmd: "{{ certificate_update_tool }}"
