--- a/tasks/install.yaml
+++ b/tasks/install.yaml
@@ -12,7 +12,7 @@
 
 - name: "Rename Certificate on {{ inventory_hostname }} (Debian)"
   ansible.builtin.shell:
-    cmd: mv "{{ certificate_dir }}/{{ certificate_file }}" "{{ certificate_dir }}/{{ certificate_file.split('/')[1].rsplit('.', 1)[0] }}.crt"
+    cmd: mv "{{ certificate_dir }}/{{ certificate_file.split('/')[1] }}" "{{ certificate_dir }}/{{ certificate_file.split('/')[1].rsplit('.', 1)[0] }}.crt"
 
 - name: "Call Shared CA Certificates Update tool on {{ inventory_hostname }}"
   ansible.builtin.shell:
